@@ -1,3 +1,11 @@
+2012-03-03  Petasis George  <petasis@iit.demokritos.gr>
+        TkDND 2.3 released.
+        * library/tkdnd_windows.tcl:
+        * win/OleDND.h:
+        * win/TkDND_OleDND.cpp: Fix in TkDND_DropSource::QueryContinueDrag,
+        to support dragging with all mouse buttons. Bug reported by
+        Michael Fersch.
+
 2011-09-24  Petasis George  <petasis@iit.demokritos.gr>
         * win/OleDND.h: Added definition of WINVER to version 5, when compiling
         with MinGW, which defines it with version 4. SF Bug ID: 3411338.
